--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mailgen": "^2.0.27",
     "mongodb-memory-server": "^8.12.2",
     "mongoose": "^7.2.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.2",
-    "nodemon": "^2.0.22"
+    "nodemailer": "^6.9.3",
+    "nodemon": "^2.0.22",
+    "otp-generator": "^4.0.1"
   }
 }
