--- a/client/pepper-tree/package.json
+++ b/client/pepper-tree/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.15.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-leaflet": "^4.2.1",
     "react-redux": "^8.0.7",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.12.0",
     "react-scroll": "^1.8.9",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1"
   },
   "devDependencies": {
