--- a/client/pepper-tree/package.json
+++ b/client/pepper-tree/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@reduxjs/toolkit": "^1.9.5",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
