--- a/client/pepper-tree/package.json
+++ b/client/pepper-tree/package.json
@@ -22,7 +22,20 @@
     "react-router-dom": "^6.12.0",
     "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.3",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+
+
+    "apexcharts": "^3.37.0",
+    "jsvectormap": "^1.5.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
+   
+    "react-apexcharts": "^1.4.0",
+    
+ 
+    "sort-by": "^1.2.0"
+
+
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
